# adv_project_dme

./: .gitignore  README.md  generator.ipynb  map_plotter.py  pyproject.toml  requirements.txt
CityGeneration/: .gitignore  LICENSE  README.md  conditional_sampler.py  inference.py  requirements.txt  train.py
CityGeneration/config/: config.yaml  model_config.yaml  model_config_old.yaml
CityGeneration/model/: attention.py  inference_model.py  model.py  template_model.py  unet.py
CityGeneration/src/callbacks/: checkpoint_callback.py  gradient_callback.py
CityGeneration/src/dataset/: city_dataloader.py
CityGeneration/src/losses/: bce_loss.py  image_kd_divergence.py  kl_divergence.py  l2_norm.py  loss_template.py
CityGeneration/src/modules/: data_module.py  train_module.py
assets/: possible_ddim_schedules.npy  town_names.json
assets/defaults/: .gitignore  shape.npz  shape_0.npy
cities/: download_data.py  utils.py
latent-diffusion/: Makefile  dataset.py  height_dataset.py  main.py  makefile  shape_dataset.py
src/city_gen/: city_dataloader.py  dataloader_config.yaml
src/data/: config.yaml  data_extractor.py  download_cities.py  shape2contour.py
src/gradio/: demo_types.py  display_map.py  gradio_configs.py  gradio_utils.py  height_shape_generator.py  main.py  mesh_map.py  path_finder.py  town_generator.py
src/testing/: generate_images_for_samples.py  generate_infill.py  generate_samples.py  generated_samples_plot.py  plot_size_cond.py  test_shape_and_height _with_emd.py  test_shape_and_height.py
undistort-map/: project_map.py  run.sh  test_points.py
(+44 files in other folders)
